Check if the map contains the session.

BUG: 308324